test/spec_vectors/conversions/fail/module_15.wat
(module (func (result f32) (f32.convert_i32_u (i64.const 0))))